--- a/01-SQL/DQL/02-条件查询.md
+++ b/01-SQL/DQL/02-条件查询.md
@@ -1,8 +1,8 @@
 ## 条件查询
 ### 常见的比较运算符如下：
-![](../image/屏幕截图%202024-03-25%20154420.png)
+![](../../image/屏幕截图%202024-03-25%20154420.png)
 ### 常见的逻辑运算符如下
-![](../image/屏幕截图%202024-03-25%20154639.png)
+![](../../image/屏幕截图%202024-03-25%20154639.png)
 ### 1.查询年龄等于88的员工
 ```SQL
 select * from emp where age = 88;
