--- a/01-SQL/DQL/03-聚合函数.md
+++ b/01-SQL/DQL/03-聚合函数.md
@@ -1,7 +1,7 @@
 ## 聚合函数
 将一列数据作为一个整体，进行纵向计算 。
 ### 常见的聚合函数
-![](../image/3.png)
+![](../../image/3.png)
 ### A. 统计该企业员工数量
 ```SQL
 select count(*) from emp; -- 统计的是总记录数
