--- a/02-函数/03-日期函数.md
+++ b/02-函数/03-日期函数.md
@@ -21,7 +21,7 @@ select day(now());
 ```
 ### E. date_add：增加指定的时间间隔
 ```SQL
-select data_add(now(), interval 70 month);
+select date_add(now(), interval 70 month);
 ```
 ### F. datediff：获取两个日期相差的天数
 ```SQL
