--- a/02-函数/04-流程函数.md
+++ b/02-函数/04-流程函数.md
@@ -40,7 +40,7 @@ insert into score(id, name, math, english, chinese) VALUES (1, 'Tom', 67, 88, 95
 select 
     id,
     name,
-    (case math when math >= 85 then '优秀' when math >= 60 then '及格' else '不及格' end) as '数学成绩'，
-    (case english when english >= 85 then '优秀' when english >= 60 then '及格' else '不及格' end) '英语成绩'，
+    (case when math >= 85 then '优秀' when math >= 60 then '及格' else '不及格' end) as '数学成绩'，
+    (case when english >= 85 then '优秀' when english >= 60 then '及格' else '不及格' end) '英语成绩'，
     (case when chinese >= 85 then '优秀' when chinese >= 60 then '及格' else '不及格' end) as '中文成绩' 
 from score;
