--- a/01-SQL/DQL/04-分组查询.md
+++ b/01-SQL/DQL/04-分组查询.md
@@ -2,11 +2,11 @@
 
 ### A. 根据性别分组 , 统计男性员工 和 女性员工的数量
 ```SQL
-select gender, count(*) from emp where group by gender;
+select gender, count(*) from emp group by gender;
 ```
 ### B. 根据性别分组 , 统计男性员工 和 女性员工的平均年龄
 ```SQL
-select gender, avg(age) from emp where group by gender;
+select gender, avg(age) from emp group by gender;
 ```
 ### C. 查询年龄小于45的员工 , 并根据工作地址分组 , 获取员工数量大于等于3的工作地址
 ```SQL
@@ -14,7 +14,7 @@ select workaddress, count(*) address_count from emp where age < 45 group by work
 ```
 ### D. 统计各个工作地址上班的男性及女性员工的数量
 ```SQL
-select workaddress, gender, count(*) from emp where group by gender, workaddress;
+select workaddress, gender, count(*) from emp group by gender, workaddress;
 ```
 where与having区别：  
 执行时机不同：where是分组之前进行过滤，不满足where条件，不参与分组；而having是分组之后对结果进行过滤。  
